--- a/PresentationLayer/MainWindow.xaml
+++ b/PresentationLayer/MainWindow.xaml
@@ -4,6 +4,6 @@
         xmlns:view="clr-namespace:PresentationLayer.View"
         Title="Library Manager" Height="450" Width="800">
     <Grid>
-        <view:InventoryStatesView/>
+        <view:BookRecordView/>
     </Grid>
 </Window>
