--- a/PresentationLayer/View/BookRecordView.xaml
+++ b/PresentationLayer/View/BookRecordView.xaml
@@ -1,7 +1,10 @@
-﻿<Window x:Class="PresentationLayer.View.BookRecordView"
-        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="Book Records" Height="450" Width="800">
+﻿<UserControl x:Class="PresentationLayer.View.BookRecordView"
+             xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
+             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+             mc:Ignorable="d"
+             d:DesignHeight="450" d:DesignWidth="800">
     <Grid Margin="10">
         <Grid.RowDefinitions>
             <RowDefinition Height="122*" />
@@ -41,4 +44,4 @@
             </StackPanel>
         </StackPanel>
     </Grid>
-</Window>
+</UserControl>
