--- a/PresentationLayer/App.xaml
+++ b/PresentationLayer/App.xaml
@@ -2,8 +2,12 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:PresentationLayer"
-             StartupUri="MainWindow.xaml">
+             StartupUri="View/MainWindow.xaml"
+             xmlns:vw="clr-namespace:PresentationLayer.View"
+>
     <Application.Resources>
-         
+
     </Application.Resources>
+    
 </Application>
+    
