--- a/PresentationLayer/View/BookRecordView.xaml
+++ b/PresentationLayer/View/BookRecordView.xaml
@@ -1,22 +1,44 @@
 ﻿<UserControl x:Class="PresentationLayer.View.BookRecordView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+             xmlns:vm="clr-namespace:PresentationLayer.ViewModel"
+             xmlns:model="clr-namespace:PresentationLayer.Model"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              mc:Ignorable="d"
              d:DesignHeight="450" d:DesignWidth="800">
+
     <Grid Margin="10">
         <Grid.RowDefinitions>
-            <RowDefinition Height="122*" />
-            <RowDefinition Height="85*" />
+            <RowDefinition Height="Auto" />
+            <!-- Add/Delete controls -->
+            <RowDefinition Height="*" />
+            <!-- DataGrid -->
         </Grid.RowDefinitions>
 
+        <!-- Controls for Add/Delete -->
+        <StackPanel Grid.Row="0" Orientation="Vertical" Margin="0,0,0,10">
+            <TextBlock FontWeight="Bold" Text="Add New Book Record" Margin="0,0,0,5"/>
+            <StackPanel Orientation="Horizontal" Margin="0,0,0,10">
+                <TextBox Width="80" Margin="5" Text="{Binding NewCustomerId}" />
+                <TextBox Width="80" Margin="5" Text="{Binding NewBookId}" />
+                <TextBox Width="100" Margin="5" Text="{Binding NewType}" />
+                <DatePicker Width="140" Margin="5" SelectedDate="{Binding NewDate}"/>
+                <Button Content="Add" Margin="5" Command="{Binding AddCommand}"/>
+            </StackPanel>
+
+            <TextBlock FontWeight="Bold" Text="Delete Book Record" Margin="0,5,0,5"/>
+            <StackPanel Orientation="Horizontal">
+                <TextBox Width="100" Margin="5" Text="{Binding DeleteRecordId}" />
+                <Button Content="Delete" Margin="5" Command="{Binding DeleteCommand}"/>
+            </StackPanel>
+        </StackPanel>
+
         <!-- DataGrid for book records -->
-        <DataGrid ItemsSource="{Binding BookRecords}"
+        <DataGrid Grid.Row="1"
+                  ItemsSource="{Binding BookRecords}"
                   SelectedItem="{Binding SelectedRecord}"
-                  AutoGenerateColumns="False"
-                  Grid.Row="0"
-                  Margin="0,0,0,10">
+                  AutoGenerateColumns="False">
             <DataGrid.Columns>
                 <DataGridTextColumn Header="ID" Binding="{Binding Id}" IsReadOnly="True"/>
                 <DataGridTextColumn Header="Customer ID" Binding="{Binding CustomerId}" />
@@ -25,23 +47,5 @@
                 <DataGridTextColumn Header="Date" Binding="{Binding Date, StringFormat=yyyy-MM-dd}" />
             </DataGrid.Columns>
         </DataGrid>
-
-        <!-- Controls for Add/Delete -->
-        <StackPanel Grid.Row="1" Orientation="Vertical" Margin="0,19,0,0">
-            <TextBlock FontWeight="Bold" Text="Add New Book Record" Margin="0,0,0,5"/>
-            <StackPanel Orientation="Horizontal" Margin="0,0,0,10">
-                <TextBox Width="80" Margin="5" Text="{Binding NewCustomerId}"/>
-                <TextBox Width="80" Margin="5" Text="{Binding NewBookId}"/>
-                <TextBox Width="100" Margin="5" Text="{Binding NewType}"/>
-                <DatePicker Width="140" Margin="5" SelectedDate="{Binding NewDate}"/>
-                <Button Content="Add" Margin="5" Command="{Binding AddCommand}"/>
-            </StackPanel>
-
-            <TextBlock FontWeight="Bold" Text="Delete Book Record" Margin="0,10,0,5"/>
-            <StackPanel Orientation="Horizontal">
-                <TextBox Width="100" Margin="5" Text="{Binding DeleteRecordId}"/>
-                <Button Content="Delete" Margin="5" Command="{Binding DeleteCommand}"/>
-            </StackPanel>
-        </StackPanel>
     </Grid>
 </UserControl>
