--- a/PresentationLayer/View/InventoryStatesView.xaml
+++ b/PresentationLayer/View/InventoryStatesView.xaml
@@ -3,6 +3,8 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+             xmlns:vm="clr-namespace:PresentationLayer.ViewModel"
+             xmlns:model="clr-namespace:PresentationLayer.Model"
              mc:Ignorable="d"
              d:DesignHeight="450" d:DesignWidth="800">
 
