--- a/PresentationLayer/App.xaml
+++ b/PresentationLayer/App.xaml
@@ -1,4 +1,4 @@
-﻿<Application x:Class="PresentationLayer.App"
+﻿<Application x:Class="LibraryApp.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:PresentationLayer"
